--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=Desevens
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -23,14 +23,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_NAME=
+MAIL_FROM_ADDRESS=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -44,3 +44,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=
+
+MIX_APP_URL="${APP_URL}"
+MIX_APP_ENV="${APP_ENV}"
+MIX_PAYSTACK_TEST_PUB=
+MIX_PAYSTACK_TEST_SEC=
+MIX_PAYSTACK_LIVE_PUB=
+MIX_PAYSTACK_LIVE_SEC=
